# colorpicker

./: .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  README.md  about.ui  build.sh  build_app.sh  build_universal.sh  colorpicker.cpp  colorpicker.h  colorpicker.mm  colorpicker.qrc  colorpicker.ui  colorwheel.cpp  colorwheel.h  drag.cpp  drag.h  dragger.cpp  dragger.h  editor.cpp  editor.h  editor.ui  eventfilter.cpp  eventfilter.h  grid.cpp  grid.h  icctransform.cpp  icctransform.h  label.cpp  label.h  lcms2.cpp  lcms2.h  mac.h  mac.mm  main.cpp  picker.cpp  picker.h
iccprofiles/: ACESCG Linear.icc  AdobeRGB1998.icc  DCI(P3) RGB.icc  Display P3.icc  ITU-2020 Gamma 2.2.icc  ITU-2020 Gamma 2.4.icc  ITU-709 Gamma 2.2.icc  ITU-709 Gamma 2.4.icc  sRGB Profile.icc
modules/: FindLcms2.cmake
resources/: App.css  App.entitlements.in  AppIcon.ai  AppIcon.icns  Copyright.txt  DS_Store  DS_Store.in  ITU-709.icc  License.txt  License_temp.txt  MacOSXBundle.plist.in  license.txt
resources/appstore/: privacy-policy.html
resources/appstore_/: privacy-policy.md
resources/appstorex/: privacy-policy.html
scripts/: clang-format.sh  macdeploy.sh  macdmg.sh  macicon.sh  macuniversal.sh
tools/genicc/: CMakeLists.txt  main.cpp
